@@ -1,20 +1,20 @@
 package com.prgrms.repository.voucher;
 
 import com.prgrms.model.voucher.Voucher;
-import com.prgrms.model.voucher.VoucherList;
-import org.springframework.context.annotation.Primary;
-import org.springframework.stereotype.Repository;
+import com.prgrms.model.voucher.Vouchers;
+import org.springframework.stereotype.Component;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.Optional;
+import java.util.TreeMap;
 
-@Repository
-@Primary
+@Component
 public class MemoryVoucherRepository implements VoucherRepository {
-    private final Map<UUID, Voucher> storage = new TreeMap<>();
+
+    private final Map<Integer, Voucher> storage = new TreeMap<>();
 
     @Override
-    public Optional<Voucher> findById(UUID voucherId) {
+    public Optional<Voucher> findById(int voucherId) {
         return Optional.ofNullable(storage.get(voucherId));
     }
 
@@ -24,10 +24,9 @@ public class MemoryVoucherRepository implements VoucherRepository {
         return voucher;
     }
 
-    @Override
-    public VoucherList getAllVoucherList() {
-        return new VoucherList(storage.values().stream()
-                .collect(Collectors.toList()));
+    public Vouchers getAllVoucher() {
+        return new Vouchers(storage.values()
+                .stream()
+                .toList());
     }
-
 }
